# flexar

./: .gitignore  Cargo.toml  README.md  example.fx
src/: compile_error.rs  cursor.rs  flexar_macro.rs  flexer.rs  flext.rs  lexer_macro.rs  lext.rs  lib.rs  main.rs  old_flexar_macro.rs  parser_macro.rs  parxt.rs  prelude.rs  token.rs  token_node.rs
src/compile_error/: compile_error_display.rs  compile_error_format.rs  compile_error_macro.rs  compile_errors.rs
src/flexer/: constructor.rs  flext.rs  token.rs
tests/: flexer_test.rs  lexer_test.rs  test.rs
