[package]
name = "flexar"
version = "0.1.0"
edition = "2021"
licence = "MIT OR Apache-2.0"
description = "An extremely flexible lexer/parser (get it?) for writing your own programming language"
authors = ["GreenChild04 <greenchild04@protonmail.com>"]
repository = "https://github.com/GreenChild04/flexer"
keywords = [ "lexer", "parser", "lexical", "text", "parsing", "reader" ]
categories = [ "parsing", "text-processing" ]

[lib]
name = "flexar"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soulog = "1.1.0"