[package]
name = "flexar"
version = "1.2.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An extremely flexible lexer/parser (get it?) for writing your own programming language"
authors = ["kalscium <kalscium@protonmail.com>"]
repository = "https://github.com/kalscium/flexar"
keywords = [ "lexer", "parser", "lexical", "lang", "parsing" ]
categories = [ "parsing", "text-processing" ]

[lib]
name = "flexar"
path = "src/lib.rs"
